added background image styling to header, services and contacts section

--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head>
-            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-                integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
-            <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-                integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
-            <script src="https://kit.fontawesome.com/636321f964.js" crossorigin="anonymous"></script>
+    <head>  <meta charset="utf-8" />
             <link href="css/bootstrap/bootstrap.css" rel="stylesheet" type="text/css">
             <link rel="stylesheet" href="css/styles.css" type="text/css" />
         <title>
@@ -100,7 +95,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="md-form mb-0">
-                            <input type="text" id="email" name="email" class="form-control" rows="2" name="your email address">
+                            <input type="text" id="email" name="email" class="form-control" rows="2" value="your email address">
                             <label for="email" class="">Your email</label>
                         </div>
                     </div>
@@ -110,7 +105,7 @@
                     <div class="col-md-12">
                 
                         <div class="md-form">
-                            <textarea type="text" id="message" name="message" rows="4" class="form-control md-textarea"></textarea>
+                            <textarea type="text" id="message" name="message" rows="4" class="form-control md-textarea" value="type your message here"></textarea>
                             <label for="message">Your message</label>
                         </div>
                     </div>
@@ -132,5 +127,7 @@
             </footer>
         </section>
         </div>
+        <script src="js/jquery-3.5.1.js"></script>
+        <script src="js/scripts.js"></script>
     </body>
 </html>
