--- a/index.html
+++ b/index.html
@@ -34,20 +34,30 @@
             <p>based on your requirement we can provide  complete offering or just the pieces you need</p>
         </section>
         <!--what we do-->
-        <section class="what-we-do">
+        <section id="what-we-do">
             <h1>WHAT WE DO</h1>
             <div class="items">
                 <div class="item1">
-                        <img src="assets/services_icons/design_icon.png" alt="designs" id="design">
-                        <p>DESIGNS</p>
+                        <a href="what-we-do"><img src="assets/services_icons/design_icon.png" alt="designs" id="design"></a>
+                        <p id=textBox>DESIGNS</p>
+                        <p id="paragraph1">Our design practice offers a full range of services including brand strategy, interaction and visual design and user
+                        experience testing.<br/>
+                        Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work
+                        with you to make sure what gets built is what is needed</p>
                 </div>
                 <div class="item2">
-                        <img src="assets/services_icons/dev_icon.png" alt="services" id="service">
+                        <a href="#"><img src="assets/services_icons/dev_icon.png" alt="services" id="service"></a>
                         <p>SERVICES</p>
+                        <p id="paragraph2">All engineers are fluent in the latest enterprise, mobile and web development technologies.<br/>
+                        They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven
+                        development and pair programming.</p>
                 </div>
                 <div class="item2">
-                        <img src="assets/services_icons/product_icon.png" alt="products" id="product">
+                        <a href="#"><img src="assets/services_icons/product_icon.png" alt="products" id="product"></a>
                         <p>MANAGMENT</p>
+                        <p id="paragraph3">Planning and development is iterative. Because we are constantly coding and testing, the products we build are always
+                        ready to go live.<br/>
+                        This iterative process allows for changes as business requirements evolve.</p>
                  </div>
             </div>   
         </section>
@@ -109,6 +119,10 @@
                             <label for="message">Your message</label>
                         </div>
                     </div>
+                </div>
+                <div class="send-message">
+                    <input type="submit" name="submit" value="send message" rows="2">
+
                 </div>
             </form>
             <footer class="the-footer">
