removed the href link from my images

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h1>WHAT WE DO</h1>
             <div class="items">
                 <div class="item1">
-                        <a href="what-we-do"><img src="assets/services_icons/design_icon.png" alt="designs" id="design"></a>
+                        <img src="assets/services_icons/design_icon.png" alt="designs" id="design">
                         <p id=textBox>DESIGNS</p>
                         <p id="paragraph1">Our design practice offers a full range of services including brand strategy, interaction and visual design and user
                         experience testing.<br/>
@@ -46,14 +46,14 @@
                         with you to make sure what gets built is what is needed</p>
                 </div>
                 <div class="item2">
-                        <a href="#"><img src="assets/services_icons/dev_icon.png" alt="services" id="service"></a>
+                        <img src="assets/services_icons/dev_icon.png" alt="services" id="service">
                         <p>SERVICES</p>
                         <p id="paragraph2">All engineers are fluent in the latest enterprise, mobile and web development technologies.<br/>
                         They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven
                         development and pair programming.</p>
                 </div>
                 <div class="item2">
-                        <a href="#"><img src="assets/services_icons/product_icon.png" alt="products" id="product"></a>
+                        <img src="assets/services_icons/product_icon.png" alt="products" id="product">
                         <p>MANAGMENT</p>
                         <p id="paragraph3">Planning and development is iterative. Because we are constantly coding and testing, the products we build are always
                         ready to go live.<br/>
