--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>  <meta charset="utf-8" />
             <link href="css/bootstrap/bootstrap.css" rel="stylesheet" type="text/css">
+              <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
             <link rel="stylesheet" href="css/styles.css" type="text/css" />
         <title>
             delani studio
