add class container

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         </title>
     </head>
     <body>
-        <div class="">
+        <div class="container">
         <!--heros section-->
         <section class="heros-page">
             <img src="assets/logo/logo.png" alt="the logo" />
